# optimus

./: .gitignore  README.md  pyproject.toml
data/adnimerge/: adnimerge.R
notebooks/: 1-data_exploration.ipynb  10-beexai.ipynb  10-captum.ipynb  2-imputation_analysis.ipynb  3-train-test_model_selection.ipynb  4-loco-cv_model_selection.ipynb  5-lomo-cv_model_selection.ipynb  6-captum_feature_analysis.ipynb  7-feature_attribution_brain_maps.ipynb  7-figures_brain_plots.ipynb  8-extra_checks.ipynb  8-extra_hyperparameter_selection.ipynb  9-extra_pytorch_tabular.ipynb
rmarkdown/: ADNI_RNA_analysis.Rmd  ADNI_RNA_microarray_preprocessing.Rmd  optimus_ADNI_RNA_analysis_review.Rmd
scripts/: pipeline.py  preprocess_data.py
src/: commands.py  config.py  dataset.py  debug.py  functions.py  gain.py  gain_utils.py  multixgboost.py  plots.py  train.py  utils.py  wrapper.py
